fixed spacing in submit forms

--- a/front/src/components/forms/SubmitForm.css
+++ b/front/src/components/forms/SubmitForm.css
@@ -42,6 +42,6 @@
     background-color: transparent;
 }
 
-#formInput{
-    
+.formInput{
+    margin-bottom: 1rem !important;
 }
